[gd_scene load_steps=60 format=3 uid="uid://ciok3inm634ug"]

[ext_resource type="Script" uid="uid://flphcbcrivfb" path="res://player/Player.gd" id="1_b0onk"]
[ext_resource type="Texture2D" uid="uid://b28lo5r47s8th" path="res://player/Slime.png" id="2_k4fjp"]
[ext_resource type="Texture2D" uid="uid://d2g6lg5frm5yl" path="res://assets/crosshairer/cross_00000.png" id="3_y2qq3"]
[ext_resource type="Script" uid="uid://bivinxbu74ue8" path="res://components/sword_orbit.gd" id="4_pd6bc"]
[ext_resource type="Script" uid="uid://bnoue86b5exll" path="res://player/object_detect.gd" id="6_7josq"]
[ext_resource type="Script" uid="uid://1887acefpfou" path="res://player/scaler.gd" id="8_x6r5k"]
[ext_resource type="Texture2D" uid="uid://dqb38xy14j2ay" path="res://assets/puntero/puntero_00012.png" id="9_ruxns"]
[ext_resource type="Texture2D" uid="uid://fuyg3db1wfhp" path="res://assets/puntero/puntero_00013.png" id="10_kftwq"]
[ext_resource type="Script" uid="uid://ct2tt7xo7lssq" path="res://components/scale_component.gd" id="10_oyueu"]
[ext_resource type="Texture2D" uid="uid://1heoyj23xgtp" path="res://assets/puntero/puntero_00014.png" id="11_sicxi"]
[ext_resource type="Texture2D" uid="uid://xdfgca1ebjud" path="res://assets/puntero/puntero_00015.png" id="12_4fk34"]
[ext_resource type="Texture2D" uid="uid://cjdqd5wo0abks" path="res://assets/puntero/puntero_00016.png" id="13_lykb1"]
[ext_resource type="Texture2D" uid="uid://cwdf4ji3mxhb6" path="res://assets/puntero/puntero_00017.png" id="14_vxurq"]
[ext_resource type="Texture2D" uid="uid://cjhk3gt0m5850" path="res://assets/puntero/puntero_00018.png" id="15_jrv8i"]
[ext_resource type="Texture2D" uid="uid://cm5ltpotg7kk1" path="res://assets/puntero/puntero_00019.png" id="16_yfgck"]
[ext_resource type="Texture2D" uid="uid://mgf4c7dj5474" path="res://assets/puntero/puntero_00020.png" id="17_o3bic"]
[ext_resource type="Texture2D" uid="uid://dqvr2nyxc8bps" path="res://assets/puntero/puntero_00021.png" id="18_jus6x"]
[ext_resource type="Texture2D" uid="uid://b3u3vajyv6gil" path="res://assets/puntero/puntero_00022.png" id="19_u3l3i"]
[ext_resource type="Texture2D" uid="uid://c4pliqi8gi5k6" path="res://assets/puntero/puntero_00023.png" id="20_tcyfn"]
[ext_resource type="Texture2D" uid="uid://d58cthcay2ma" path="res://assets/puntero/puntero_00011.png" id="21_di1ok"]
[ext_resource type="Texture2D" uid="uid://b1vu6nni6mj0g" path="res://assets/puntero/puntero_00010.png" id="22_imdv5"]
[ext_resource type="Texture2D" uid="uid://cvlrit845hth3" path="res://assets/puntero/puntero_00009.png" id="23_tvg2h"]
[ext_resource type="Texture2D" uid="uid://cjolnb1q126kf" path="res://assets/puntero/puntero_00008.png" id="24_rhht4"]
[ext_resource type="Texture2D" uid="uid://hbgt3yyutweu" path="res://assets/puntero/puntero_00007.png" id="25_h6gnl"]
[ext_resource type="Texture2D" uid="uid://cxtktc37380ug" path="res://assets/puntero/puntero_00006.png" id="26_iwlu3"]
[ext_resource type="Texture2D" uid="uid://di65boaxqdlkq" path="res://assets/crosshairer/cross_00023.png" id="26_v84od"]
[ext_resource type="Texture2D" uid="uid://b4x2b46cuao1k" path="res://assets/puntero/puntero_00005.png" id="27_j6u8f"]
[ext_resource type="Texture2D" uid="uid://b2i0u7da0dx0g" path="res://assets/puntero/puntero_00004.png" id="28_5lx6k"]
[ext_resource type="Texture2D" uid="uid://ofctt361vbj1" path="res://assets/puntero/puntero_00003.png" id="29_tod1o"]
[ext_resource type="Texture2D" uid="uid://ds523fud2jy0t" path="res://assets/puntero/puntero_00002.png" id="30_c4fp4"]
[ext_resource type="Texture2D" uid="uid://b7pevbn60k6gc" path="res://assets/puntero/puntero_00001.png" id="31_vyve3"]
[ext_resource type="Texture2D" uid="uid://ey38pbix2ayk" path="res://assets/puntero/puntero_00000.png" id="32_apo53"]
[ext_resource type="Script" uid="uid://dou5h5mjmu8sy" path="res://components/spawner_component.gd" id="34_jxusd"]
[ext_resource type="Texture2D" uid="uid://b4mt8olagqrqh" path="res://assets/nRmVV (2).png" id="34_xrxf5"]
[ext_resource type="Texture2D" uid="uid://mv2y6g1xaet4" path="res://assets/lights/nRmVV (2).png" id="36_xf517"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_etpo6"]
size = Vector2(29, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa8j4"]
atlas = ExtResource("2_k4fjp")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gues"]
atlas = ExtResource("2_k4fjp")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2762b"]
atlas = ExtResource("2_k4fjp")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya8j8"]
atlas = ExtResource("2_k4fjp")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmseq"]
atlas = ExtResource("2_k4fjp")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnqne"]
atlas = ExtResource("2_k4fjp")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w8ne"]
atlas = ExtResource("2_k4fjp")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0et17"]
atlas = ExtResource("2_k4fjp")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6b5x"]
atlas = ExtResource("2_k4fjp")
region = Rect2(96, 144, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_bgbxa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa8j4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gues")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2762b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya8j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmseq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnqne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w8ne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0et17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6b5x")
}],
"loop": true,
"name": &"Walk",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_t2xej"]
atlas = ExtResource("2_k4fjp")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtxom"]
atlas = ExtResource("2_k4fjp")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro8d1"]
atlas = ExtResource("2_k4fjp")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho6gv"]
atlas = ExtResource("2_k4fjp")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_64pui"]
atlas = ExtResource("2_k4fjp")
region = Rect2(144, 240, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_xvxnq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2xej")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtxom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro8d1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho6gv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64pui")
}],
"loop": false,
"name": &"Walked",
"speed": 15.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_o6k1a"]
blend_mode = 1
light_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_q28gw"]
radius = 20.3

[sub_resource type="SpriteFrames" id="SpriteFrames_qgxpx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_v84od")
}],
"loop": false,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_hvaf5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_y2qq3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_b7hsf"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wo7d0"]
radius = 24.0

[sub_resource type="SpriteFrames" id="SpriteFrames_u5c4y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_ruxns")
}, {
"duration": 1.0,
"texture": ExtResource("10_kftwq")
}, {
"duration": 1.0,
"texture": ExtResource("11_sicxi")
}, {
"duration": 1.0,
"texture": ExtResource("12_4fk34")
}, {
"duration": 1.0,
"texture": ExtResource("13_lykb1")
}, {
"duration": 1.0,
"texture": ExtResource("14_vxurq")
}, {
"duration": 1.0,
"texture": ExtResource("15_jrv8i")
}, {
"duration": 1.0,
"texture": ExtResource("16_yfgck")
}, {
"duration": 1.0,
"texture": ExtResource("17_o3bic")
}, {
"duration": 1.0,
"texture": ExtResource("18_jus6x")
}, {
"duration": 1.0,
"texture": ExtResource("19_u3l3i")
}, {
"duration": 1.0,
"texture": ExtResource("20_tcyfn")
}],
"loop": false,
"name": &"Down",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_tcyfn")
}],
"loop": true,
"name": &"MasDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("32_apo53")
}],
"loop": true,
"name": &"MasUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_ruxns")
}, {
"duration": 1.0,
"texture": ExtResource("21_di1ok")
}, {
"duration": 1.0,
"texture": ExtResource("22_imdv5")
}, {
"duration": 1.0,
"texture": ExtResource("23_tvg2h")
}, {
"duration": 1.0,
"texture": ExtResource("24_rhht4")
}, {
"duration": 1.0,
"texture": ExtResource("25_h6gnl")
}, {
"duration": 1.0,
"texture": ExtResource("26_iwlu3")
}, {
"duration": 1.0,
"texture": ExtResource("27_j6u8f")
}, {
"duration": 1.0,
"texture": ExtResource("28_5lx6k")
}, {
"duration": 1.0,
"texture": ExtResource("29_tod1o")
}, {
"duration": 1.0,
"texture": ExtResource("30_c4fp4")
}, {
"duration": 1.0,
"texture": ExtResource("31_vyve3")
}, {
"duration": 1.0,
"texture": ExtResource("32_apo53")
}],
"loop": false,
"name": &"Up",
"speed": 24.0
}]

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Player", "button_actionable"]]
collision_layer = 9
collision_mask = 9
script = ExtResource("1_b0onk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_etpo6")
debug_color = Color(0.759429, 0.181563, 1, 0.42)

[node name="Animacion" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bgbxa")
animation = &"Idle"
offset = Vector2(0.5, -10)

[node name="Eyes" type="AnimatedSprite2D" parent="Animacion"]
z_index = 1
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_xvxnq")
animation = &"Idle"
offset = Vector2(0, -10)

[node name="fakelight" type="Sprite2D" parent="Animacion"]
visible = false
modulate = Color(0, 0.39, 0.00649999, 0.392157)
material = SubResource("CanvasItemMaterial_o6k1a")
scale = Vector2(0.3, 0.3)
texture = ExtResource("34_xrxf5")

[node name="Normallight" type="PointLight2D" parent="Animacion"]
color = Color(0.333333, 1, 0, 1)
energy = 0.5
texture = ExtResource("36_xf517")
texture_scale = 0.5

[node name="RigidBody2D" type="RigidBody2D" parent="."]
collision_layer = 2
collision_mask = 2
sleeping = true
lock_rotation = true
freeze = true
linear_velocity = Vector2(0, -200)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
rotation = 1.5708
shape = SubResource("CircleShape2D_q28gw")
debug_color = Color(0.819608, 0, 0, 0.772549)

[node name="Pickup" type="Marker2D" parent="."]
position = Vector2(0, -36)

[node name="Crosshair" type="AnimatedSprite2D" parent="Pickup" node_paths=PackedStringArray("player")]
visible = false
scale = Vector2(0.02, 0.02)
sprite_frames = SubResource("SpriteFrames_qgxpx")
script = ExtResource("4_pd6bc")
radius = 48
player = NodePath("..")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("player")]
scale = Vector2(0.02, 0.02)
sprite_frames = SubResource("SpriteFrames_hvaf5")
offset = Vector2(0, -3)
script = ExtResource("4_pd6bc")
radius = 50
player = NodePath("..")
normalaim = true

[node name="ObjectDetect" type="Area2D" parent="AnimatedSprite2D"]
collision_layer = 3
collision_mask = 3
monitoring = false
script = ExtResource("6_7josq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/ObjectDetect"]
shape = SubResource("CircleShape2D_b7hsf")
debug_color = Color(0.323337, 0.490255, 1, 0.42)

[node name="MouseDetc" type="Area2D" parent="." groups=["button_actionable"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseDetc"]
shape = SubResource("CircleShape2D_wo7d0")

[node name="Scaler" type="Node2D" parent="."]
visible = false
script = ExtResource("8_x6r5k")

[node name="Sprite2D" type="AnimatedSprite2D" parent="Scaler"]
scale = Vector2(0.03, 0.03)
sprite_frames = SubResource("SpriteFrames_u5c4y")
animation = &"Up"
flip_v = true

[node name="Fijo" type="Sprite2D" parent="Scaler"]
z_index = 2
scale = Vector2(0.04, 0.04)
texture = ExtResource("9_ruxns")

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("10_oyueu")
sprite = NodePath("..")

[node name="RagdollSpawn" type="Node2D" parent="."]
script = ExtResource("34_jxusd")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="SmallLight" type="PointLight2D" parent="."]
visible = false
color = Color(0.333333, 1, 0, 1)
energy = 0.5
texture = ExtResource("36_xf517")
texture_scale = 0.5

[connection signal="scare" from="." to="." method="_on_scare"]
[connection signal="body_entered" from="AnimatedSprite2D/ObjectDetect" to="." method="_on_object_detect_body_entered"]
[connection signal="mouse_entered" from="MouseDetc" to="." method="_on_mouse_detc_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetc" to="." method="_on_mouse_detc_mouse_exited"]
